[tool.poetry]
name = "nonebot-plugin-sd-webui"
version = "0.1.2"
description = ""
authors = ["evan-gyy <evangu1104@foxmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_sd_webui"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
nonebot-plugin-guild-patch ="*"
nonebot-adapter-onebot = { version = "^2.0.0-beta.1", optional = true }
webuiapi = "*"
requests = "*"
httpx = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
